@@ -256,8 +256,9 @@ channelsnames[205] = "BBC NEWS (S)";
 channels[205] = "S28.2E-2-2047-6405";
 channelsnames[206] = "BBC PARL'MNT (S)";
 channels[206] = "S28.2E-2-2046-10307";
-channelsnames[211] = "ITV1 London (S)";
-channels[211] = "S28.2E-2-2044-10060";
+channelsnames[211] = "ITV1 London HD (S)";
+channels[211] = "S28.2E-2-2049-10000";
+// SD channels[211] = "S28.2E-2-2044-10060";
 channelsnames[212] = "ITV1+1 (S)";
 channels[212] = "S28.2E-2-2054-10255";
 channelsnames[213] = "ITV2 (S)";
@@ -272,8 +273,9 @@ channelsnames[217] = "ITV4 (S)";
 channels[217] = "S28.2E-2-2044-10072";
 channelsnames[218] = "ITV4+1 (S)";
 channels[218] = "S28.2E-2-2049-10015";
-channelsnames[220] = "Channel 4 (S)";
-channels[220] = "S28.2E-2-2041-9211";
+channelsnames[220] = "Channel 4 HD (S)";
+channels[220] = "S28.2E-2-2068-21200";
+// SD channels[220] = "S28.2E-2-2041-9211";
 channelsnames[221] = "Channel 4 +1 (S)";
 channels[221] = "S28.2E-2-2042-8311";
 channelsnames[222] = "E4 (S)";
@@ -442,16 +444,12 @@ channelsnames[319] = "Nick Jr (S)";
 channels[319] = "S28.2E-2-2604-54355";
 channelsnames[320] = "Nick Jr. 2 (S)";
 channels[320] = "S28.2E-2-2313-53285";
-channelsnames[321] = "NICK JR (S)";
-channels[321] = "S30.0W-49-7-75";
 channelsnames[322] = "Nick Jr France (S)";
 channels[322] = "S19.2E-1-1078-28677";
 channelsnames[323] = "Nick Jr. (S)";
 channels[323] = "S13.0E-318-1400-30";
 channelsnames[324] = "Nick Jr (S)";
 channels[324] = "S13.0E-64511-800-1424";
-channelsnames[325] = "DISNEY JR (S)";
-channels[325] = "S30.0W-49-4-71";
 channelsnames[326] = "Disney Junior (S)";
 channels[326] = "S28.2E-2-2051-9004";
 channelsnames[327] = "Disney Junior+ (S)";
@@ -518,8 +516,9 @@ channelsnames[411] = "Radio Bremen TV (S)";
 channels[411] = "S19.2E-1-1201-28385";
 channelsnames[412] = "tagesschau24 (S)";
 channels[412] = "S19.2E-1-1051-28721";
-channelsnames[413] = "Einsfestival (S)";
-channels[413] = "S19.2E-1-1051-28722";
+channelsnames[413] = "Einsfestival HD (S)";
+channels[413] = "S19.2E-1-1201-28396";
+// SD channels[413] = "S19.2E-1-1051-28722";
 channelsnames[414] = "EinsPlus (S)";
 channels[414] = "S19.2E-1-1051-28723";
 channelsnames[415] = "ZDFinfo (S)";
@@ -684,10 +683,12 @@ channelsnames[515] = "SF 1 (S)";
 channels[515] = "S13.0E-318-8500-901";
 channelsnames[516] = "SF zwei (S)";
 channels[516] = "S13.0E-318-8500-907";
-channelsnames[517] = "RSI LA 1 (S)";
-channels[517] = "S13.0E-318-1700-14003";
-channelsnames[518] = "RSI LA 2 (S)";
-channels[518] = "S13.0E-318-1700-14009";
+channelsnames[517] = "RSI LA 1 HD (S)";
+channels[517] = "S13.0E-318-1700-14051";
+// SD channels[517] = "S13.0E-318-1700-14003";
+channelsnames[518] = "RSI LA 2 HD (S)";
+channels[518] = "S13.0E-318-8500-951";
+// SD channels[518] = "S13.0E-318-1700-14009";
 channelsnames[519] = "RTS Un (S)";
 channels[519] = "S13.0E-318-1700-14002";
 channelsnames[520] = "RTS Deux (S)";
@@ -1194,11 +1195,23 @@ channelsnames[954] = "Discovery Travel (S)";
 channels[954] = "S13.0E-64511-800-1465";
 channelsnames[955] = "RTG TV (S)";
 channels[955] = "S13.0E-318-15600-10735";
-
-channelsnames[961] = "NED1 HD (S)"
-channels[961] = "S23.5E-3-3208-7035"
-channelsnames[962] = "NED2 HD (S)"
-channels[962] = "S23.5E-3-3202-6080"
-channelsnames[963] = "NED3 HD (S)"
-channels[963] = "S23.5E-3-3225-21040"
+// HD in DVB-S
+channelsnames[960] = "Nickelodeon HD (S)";
+channels[960] = "S13.0E-318-1400-31";
+channelsnames[961] = "MTV Live HD S13";
+channels[961] = "S13.0E-318-12800-1";
+channelsnames[962] = "MTV Live HD S19";
+channels[962] = "S19.2E-1-1068-28600";
+channelsnames[963] = "NHK World HD (S)";
+channels[963] = "S28.2E-2-2312-53147";
+channelsnames[964] = "Einsfestival HD (S)";
+channels[964] = "S19.2E-1-1201-28396";
+channelsnames[965] = "RSI LA 1 HD (S)";
+channels[965] = "S13.0E-318-1700-14051";
+channelsnames[966] = "RSI LA 2 HD (S)";
+channels[966] = "S13.0E-318-8500-951";
+channelsnames[968] = "ITV1 London HD (S)";
+channels[968] = "S28.2E-2-2049-10000";
+channelsnames[969] = "Channel 4 HD (S)";
+channels[969] = "S28.2E-2-2068-21200";
 
