@@ -118,4 +118,5 @@ var timerChan = 10;
 var TimerActions = "";
 var switchtimerID = 0;
 var SwitchTimer = 1; // No other options yet
+var initialDelayID = 0;
 
